<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        style="@style/ConstraintLightAndBlackE"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        style="@style/Text_black_white"
        android:text="@string/want_remove_player"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textSize="17dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        style="@style/background_edges"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Text_black_white"
            android:padding="9dp"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>