<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintLightAndBlackE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnClose"
            style="@style/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Text_black_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/we_are_grateful_to_you"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClose" />


        <androidx.cardview.widget.CardView
            android:id="@+id/btnWatchAd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#2DE14A"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="11dp"
                android:text="@string/view_ads"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btnGoogle"
            style="@style/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWatchAd">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/google" />

            <TextView
                android:id="@+id/tvGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/pay"
                android:textSize="16dp"
                android:textStyle="bold"

                android:theme="@style/Text_black_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/Text_black_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nicks"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnGoogle"
            app:layout_constraintStart_toStartOf="@+id/btnGoogle"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>