<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConstraintLightAndBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.add.AddPlayerFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#313131"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/tvTitleAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/adding_player"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnGoodOrBadPlayerAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        style="@style/ConstraintLightAndBlackE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvGoodOrBadPlayerAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/good_player"
            android:textSize="25dp"
            android:textColor="#00FF38"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoodOrBadPlayerAdd">

        <EditText
            android:id="@+id/edNickPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/nick_player"
            android:inputType="text"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edDescriptionReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/reason_add_player"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:padding="10dp"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDegreeAngerAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/degree_anger"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <LinearLayout
        android:id="@+id/blockDegreeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDegreeAngerAdd">

        <androidx.cardview.widget.CardView
            android:id="@+id/firstAngerAdd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#00FF38"
            app:cardCornerRadius="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/secondAngerAdd"
            style="@style/ConstraintLightAndBlackE"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/thirdsAngerAdd"
            style="@style/ConstraintLightAndBlackE"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fourthAngerAdd"
            style="@style/ConstraintLightAndBlackE"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fifthAngerAdd"
            style="@style/ConstraintLightAndBlackE"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="100dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="#2DE14A"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>